[package]
name = "maivin-replay"
description = "Maivin MCAP Replay"
repository = "https://bitbucket.org/au-zone/maivin-replay"
version = "0.0.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
strip = true
debug = false

[profile.profiling]
inherits = "release"
strip = false
debug = true

[features]
default = ["tracy"]
tracy = ["tracing-tracy/enable", "tracy-client/enable"]
profiling = [
    "tracing-tracy/sampling",
    "tracing-tracy/system-tracing",
    "tracy-client/sampling",
    "tracy-client/system-tracing",
]

[dependencies]
cdr = "0.2.4"
clap = { version = "4.5.31", features = ["derive", "env"] }
ctrlc = "3.4.5"
dma-buf = "0.4.0"
dma-heap = "0.4.0"
edgefirst-schemas = "1.2.4"
g2d-sys = { version = "1.0.0", path = "g2d-sys" }
log = { version = "0.4.26", features = ["release_max_level_debug"] }
mcap = "0.15.0"
memmap2 = "0.9.5"
nix = { version = "0.29.0", features = ["time"] }
serde_json = "1.0.139"
tokio = { version = "1.42", features = ["rt"] }
tracing = "0.1.30"
tracing-journald = "0.3.1"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.19"
tracing-tracy = { version = "0.11.4", default-features = false, features = [
    "manual-lifetime",
    "broadcast",
    "ondemand",
    "fibers",
] }
tracy-client = { version = "0.18.0", default-features = false, features = [
    "manual-lifetime",
    "broadcast",
    "ondemand",
    "fibers",
] }
turbojpeg = { version = "1.2.2", features = ["image"] }
videostream = "0.9.1"
zenoh = "1.2.1"
