[package]
name = "edgefirst-replay"
description = "EdgeFirst MCAP Replay"
license = "Apache-2.0"
repository = "https://github.com/EdgeFirstAI/replay"
homepage = "https://github.com/EdgeFirstAI/replay"
version = "2.2.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
strip = true
debug = false

[profile.profiling]
inherits = "release"
strip = false
debug = true

[features]
default = ["tracy"]
tracy = ["tracing-tracy/enable", "tracy-client/enable"]
profiling = [
    "tracing-tracy/sampling",
    "tracing-tracy/system-tracing",
    "tracy-client/sampling",
    "tracy-client/system-tracing",
]

[dependencies]
clap = { version = "4.5.38", features = ["derive", "env"] }
ctrlc = "3.4.7"
edgefirst-codec = "0.23.1"
edgefirst-hal = "0.23.1"
edgefirst-schemas = "3.4.0"
log = { version = "0.4.27", features = ["release_max_level_debug"] }
mcap = "0.18.0"
memmap2 = "0.9.5"
nix = { version = "0.31.2", features = ["fs", "time"] }
serde_json = "1.0.140"
tracing = "0.1.41"
tracing-journald = "0.3.1"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.19"
tracing-tracy = { version = "0.11.4", default-features = false, features = [
    "manual-lifetime",
    "broadcast",
    "ondemand",
    "fibers",
] }
tracy-client = { version = "0.18.0", default-features = false, features = [
    "manual-lifetime",
    "broadcast",
    "ondemand",
    "fibers",
] }
videostream = "2.5.1"
zenoh = "1.3.4"
