[package]
name = "g2d-sys"
description = "Low-level FFI bindings for the G2D Library"
license = "AGPL-3.0"
homepage = "https://support.deepviewml.com"
keywords = ["deepview", "visionpack"]
categories = ["computer-vision", "multimedia::video", "external-ffi-bindings"]
version = "1.0.1"
edition = "2021"

[dependencies]
libloading = "0.8.1"
dma-buf = "0.4.0"
nix = { version = "0.29.0", features = ["ioctl"] }
videostream = "0.9.0"