[package]
name = "g2d-sys"
description = "Low-level FFI bindings for the G2D Library"
license = "Apache-2.0"
repository = "https://github.com/EdgeFirstAI/replay"
homepage = "https://github.com/EdgeFirstAI/replay"
keywords = ["edgefirst", "g2d", "graphics"]
categories = ["computer-vision", "multimedia::video", "external-ffi-bindings"]
version = "2.0.0"
edition = "2021"

[dependencies]
libloading = "0.8.7"
dma-buf = "0.5.0"
nix = { version = "0.30.1", features = ["ioctl"] }
videostream = "2.1.4"